# pvsram

./: README.md  package-lock.json  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_add_color_to_accounts.sql  0003_create_transactions.sql  0004_create_app_auth.sql  0005_introducing_concepts.sql  0006_remove_orphan_concepts.sql  0007_remove_orpahn_concepts_fixed.sql  0008_fixing_this_trigger.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: account.rs  auth.rs  concept.rs  database.rs  mod.rs  transaction.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: account.rs  concept.rs  mod.rs  transaction.rs
src-tauri/tests/: account_tests.rs  transaction_tests.rs
src/lib/components/: ExportButtons.svelte  Header.svelte
src/lib/components/Account/: AccountCard.svelte  CreateAccount.svelte  EditAccountButton.svelte  OperationsAccountButton.svelte
src/lib/components/Auth/: ChangePasswordButton.svelte  LoginScreen.svelte
src/lib/components/Transactions/: DeleteTransactionButton.svelte  EditTransactionButton.svelte
src/lib/services/: accounts.ts  auth.ts  concepts.ts  reports.ts  statistics.ts  transactions.ts
src/lib/utils/: export.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/history/: +page.svelte
src/routes/reports/: +page.svelte
src/routes/statistics/: +page.svelte
