[package]
name = "pvsr-accounts-management"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "pvsr-accounts-management"     # ← Aquí debe estar

[lib]
name = "pvsr_accounts_management_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pvsr-accounts-management"
path = "src/main.rs"

[[bin]]
name = "seed_db"
path = "src/bin/seed_db.rs"

[[bin]]
name = "reset_db"
path = "src/bin/reset_db.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["full"] }
rand = { version = "0.8", features = ["std_rng"] }
fake = { version = "2", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
